--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1705,7 +1705,7 @@ display: none;
   contact Details
 \*-----------------------------------*/
 
-.contact-details {
+#contact-details {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -1713,16 +1713,16 @@ display: none;
   line-height: 4rem;
   }
   
-  .contact-details .details {
+  #contact-details .details {
   width: 48%;
   }
   
- .contact-details .details span {
+ #contact-details .details span {
   font-size: 1.6rem;
   color:  var(--black);
   }
   
-  .contact-details .details h2 {
+  #contact-details .details h2 {
   font-size: 4rem;
   text-transform: uppercase;
   line-height: 2.5rem;
@@ -1730,34 +1730,34 @@ display: none;
   color: var(--verdigris);
   }
   
-  .contact-details .details div {
+  #contact-details .details div {
   margin-bottom: 1.25rem;
   display: flex;
   align-items: flex-start;
   }
   
-  .contact-details .details i {
+  #contact-details .details i {
   font-size: 2rem;
   margin-right: .6rem;
   color: var(--green); 
   cursor: pointer;
   transition: .3s ease;
   }
-  .contact-details .details i:hover {
+  #contact-details .details i:hover {
    color: var(--green);
   }
   
-  .contact-details .details p {
+  #contact-details .details p {
   font-size: 1.5rem;
   margin: 0;
   color: var(--black);
   }
   
-  .contact-details .map {
+  #contact-details .map {
   width: 48%;
   }
   
-  .contact-details .map iframe {
+  #contact-details .map iframe {
   width: 100%;
   height: 50rem; 
   border: .1rem solid #ddd; 
@@ -1985,28 +1985,28 @@ padding: 0rem;
 .about-banner {
   flex-direction: column; 
 }
-.contact-details .details,
-.contact-details .map {
+#contact-details .details,
+#contact-details .map {
   width: 100%; 
 }
-.contact-details .details h2 {
+#contact-details .details h2 {
   font-size: 1.8rem; 
   line-height: 2rem;
 }
-.contact-details .details i {
+#contact-details .details i {
   font-size: 1.2rem; 
 }
-.contact-details .details p,
+#contact-details .details p,
 .contact-form span,
 .contact-form h3,
 .contact-form form input,
 .contact-form form textarea {
   font-size: 1rem; 
 }
-.contact-details .map iframe {
+#contact-details .map iframe {
   height: 15rem;
 }
-.contact-form,
+#contact-form,
 .people-container {
   flex-basis: 100%; 
 }
@@ -2022,7 +2022,7 @@ padding: 0rem;
   padding:0rem;
   margin: 1rem;
 }
-.contact-details {
+#contact-details {
   flex-direction: column;
   align-items: flex-start;
   padding: 1rem;
@@ -2052,7 +2052,7 @@ padding: 0rem;
 
 @media (max-width: 480px) {
 /* contact */
-.contact-details {
+#contact-details {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -2065,7 +2065,7 @@ padding: 0rem;
   padding:0rem;
   margin: 1rem;
 }
-.contact-details {
+#contact-details {
   flex-direction: column;
   align-items: flex-start;
   padding: 1rem;
