--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2393,4 +2393,80 @@ Product */
   vertical-align: middle;
 }
 
+/*baner*/
+
+.pwa-banner {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: #005761;
+      color: #fff;
+      padding: 10px;
+      z-index: 9999;
+      transition: transform 0.6s ease, opacity 0.6s ease, height 0.6s ease;
+      overflow: hidden;
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+
+    .pwa-banner.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .pwa-banner.hidden {
+      transform: translateY(-100%);
+      opacity: 0;
+      height: 0;
+      padding: 0;
+    }
+
+    .pwa-content {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+    }
+
+    .pwa-logo {
+      height: 30px;
+    }
+
+    .pwa-text {
+      font-size: 16px;
+      font-weight: bold;
+    }
+
+    .pwa-btn {
+      background: #fff;
+      color: #005761;
+      border: none;
+      padding: 6px 12px;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
+    .pwa-close {
+      background: transparent;
+      color: #fff;
+      font-size: 18px;
+      border: none;
+      cursor: pointer;
+    }
+
+    .ios-instructions {
+      display: none;
+      margin-top: 10px;
+      text-align: center;
+    }
+    .ios-instructions.active {
+      display: block;
+    }
+
+    .ios-instructions img {
+      max-width: 90%;
+      border-radius: 8px;
+      margin-bottom: 10px;
+    }
 
