--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2470,39 +2470,47 @@ Product */
       width: 100%;
       background: #005761;
       color: #fff;
-      padding: 10px;
+      padding: 12px 16px;
       z-index: 9999;
-      transition: transform 0.5s ease, opacity 0.5s ease, height 0.5s ease;
+     transition: transform 0.4s ease, opacity 0.4s ease;
       overflow: hidden;
+        transform: translateY(-100%);
       opacity: 0;
     }
 
-    .pwa-banner.visible {
-      opacity: 0;
-      transform: translateY(0);
-    }
+   .pwa-banner.visible {
+  transform: translateY(0);
+  opacity: 1;
+}
 
-    .pwa-banner.hidden {
-      transform: translateY(-100%);
-      opacity: 0;
-      height: 0;
-      padding: 0;
-    }
+ .pwa-banner.hidden {
+  transform: translateY(-100%);
+  opacity: 0;
+}
 
-    .pwa-content {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 15px;
-    }
+
+.pwa-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 15px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.pwa-left {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
 
     .pwa-logo {
       height: 30px;
     }
 
-    .pwa-text {
+  .pwa-text {
       font-size: 16px;
-      font-weight: bold;
+      font-weight: 600;
     }
 
     .pwa-btn {
@@ -2512,17 +2520,18 @@ Product */
       padding: 6px 12px;
       cursor: pointer;
       border-radius: 4px;
+      font-weight: 600;
     }
 
     .pwa-close {
-      background: transparent;
-      color: #fff;
-      font-size: 18px;
-      border: none;
-      cursor: pointer;
-    }
+  background: transparent;
+  color: #fff;
+  font-size: 18px;
+  border: none;
+  cursor: pointer;
+  }
 
-    .ios-instructions {
+   .ios-instructions {
       display: none;
       margin-top: 10px;
       text-align: center;
@@ -2536,6 +2545,8 @@ Product */
       border-radius: 8px;
       margin-bottom: 10px;
     }
+
+/*baner
 
 .doctors-grid {
   display: grid;
@@ -2554,4 +2565,4 @@ Product */
   max-width: 100%;
   border-radius: 50%;
 }
-    
+    */
