--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -955,6 +955,7 @@ display: none;
   bottom: 30px;
   right: 30px;
   background-color: var(--verdigris);
+  cursor: pointer;
   color: var(--white);
   padding: 16px;
   font-size: 2rem;
@@ -962,7 +963,9 @@ display: none;
   transition: var(--transition-1);
   opacity: 0;
   z-index: 3;
-}
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23fff' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z'/%3E%3C/svg%3E");
+    }
+
 
 .back-top-btn:is(:hover, :focus-visible) { background-color: var(--eerie-black); }
 
@@ -2504,7 +2507,7 @@ Product */
   gap: 12px;
 }
 
-    .pwa-logo {
+.pwa-logo {
       height: 30px;
     }
 
