--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2467,22 +2467,28 @@ Product */
 /*baner*/
 
 .pwa-banner {
-    background-color: #ffffff; /* Колір фону банера */
+    background-color: var(--midnight-green); /* Колір фону банера */
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
     width: 100%;
-    z-index: 9999;
+    z-index: 10;
     position: relative; 
     overflow: hidden;  
-    max-height: 0;
-    opacity: 0;
-    transition: max-height 0.5s ease-out, opacity 0.3s ease-out, margin 0.5s ease;
+     height: 0;
+  opacity: 0;
+  padding: 0;
+     transition:
+    height 0.5s ease,
+    opacity 0.3s ease,
+    padding 0.5s ease;
     display: flex;
-    justify-content: center;
+  justify-content: center;
+  align-items: center;
   }
 
 .pwa-banner.visible {
-    max-height: 200px; 
-    opacity: 1;
+    height: 64px;
+    padding: 12px 16px;
+  opacity: 1;
   }
 
 .pwa-banner.hidden {
