--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -566,7 +566,9 @@ height: 100%; }
 \*-----------------------------------*/
 
 .about { padding-block-end: 0;  overflow-x: hidden;}
-
+.section-container {
+   padding-inline: 16px;
+}
 .about .container {
   display: grid;
   gap: 20px;
@@ -668,6 +670,7 @@ display: none;
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 
@@ -1014,7 +1017,7 @@ display: none;
    */
 
   .container {
-    max-width: 750px;
+    max-width: 900px;
     width: 100%;
     margin-inline: auto;
   }
@@ -1203,7 +1206,7 @@ display: none;
 
   .about-content { padding-block-end: var(--section-padding); }
 
-  .about-banner { margin-inline-end: -80px; }
+  .about-banner { margin-inline-end: -200px; }
 
 
 
@@ -1882,72 +1885,7 @@ display: none;
  /*-----------------------------------*\
   contact  form Details
 \*-----------------------------------*/
-  #contact-form {
-  display: flex;
-  justify-content: space-between;
-  margin: 2rem;
-  margin-left: 2rem;
-  
-  }
-  
-  .contact-form {
-  flex-basis: 48%;
-  padding: 2rem;
-  border: 0.1rem solid  var(--green);
-  background-color: #f5f5f5;
-  border-radius: 10px;
-  box-sizing: border-box;
-  }
-  
-  .contact-form span {
-  font-size: 1rem;
-  color: var(--black);
-  margin-bottom: 0.4rem;
-  }
-  
-  .contact-form h3 {
-  color: var(--black);
-  font-size: 1.5rem;
-  margin-bottom: 1.5rem;
-  }
-  
-  .contact-form form {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  }
-  
-  .contact-form form input,
-  .contact-form form textarea {
-  width: 100%;
-  padding: 1rem;
-  margin-bottom: 1.25rem;
-  border: 0.1rem solid #666;
-  background-color: #fff;
-  color: var(--black);
-  outline: none;
-  border-radius: 5px;
-  }
-  
-  #submit-button {
-  background-color:  var(--green);
-  color: white;
-  border: none;
-  padding: 1rem 2rem;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-  }
-  
-  #submit-button:hover {
-  background-color: var(--midnight-green_a25);
-  }
-  
-  #submit-button:disabled {
-  background-color: var(--middle-blue-green_40);
-  cursor: not-allowed;
-  }
-  
+ 
   /*-----------------------------------*\
   people / team / contact us page
 \*-----------------------------------*/
@@ -2361,7 +2299,7 @@ padding: 0rem;
 }
 .review .box:nth-child(1) { transition-delay: 0.1s; }
 .review .box:nth-child(2) { transition-delay: 0.2s; }
-.review .box:nth-child(3) { transition-delay: 0.2s; }*/*/
+.review .box:nth-child(3) { transition-delay: 0.2s; }*/
 
 .review {
   background: #f7f9fa;
