--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,7 +226,7 @@ body.nav-active { overflow: hidden; }
   left: -100%;
   width: 100%;
   height: 100%;
-  background-color: var(--eerie-black);
+  background-color: var(--midnight-green_a25);
   border-radius: var(--radius-6);
   transition: var(--transition-2);
   z-index: -1;
